- 升级项目构建配置到新版本 - 添加i18n国际化